--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FotoClick</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="imagenes/logo1.jpg">
+    <!--link rel="icon" href="imagenes/logo1.jpg"--> 
     <!-- <script src="https://unpkg.com/i18next@latest/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-browser-languagedetector@latest/dist/umd/i18nextBrowserLanguageDetector.min.js"></script>
     <script type="module" src="js/i18n.js" defer></script>
@@ -30,17 +30,18 @@
                 <img src="imagenes/logo1.jpg" alt="logo">
                 <h1>FotoClick</h1>
             </div>
+            <button class="menu-toggle" aria-label="Open Menu">
+                ☰
+            </button>
             <div class="nav">
                 <nav>
-                    <ul>
+                    <ul class="nav-links">
                         <li><a href="#inicio" id="inicio">Inicio</a></li>
                         <li><a href="#portafolio" id="portfolio">Portafolio</a></li>
                         <li><a href="#nosotros" id="about">Nosotros</a></li>
                         <li><a href="#contacto" id="contact">Contacto</a></li>
                         <li><a href="https://wa.me/3145203021" id="networks">Redes</a></li>
                         |
-                        <!-- <li><a href="javascript:void(0);" id="en" id="btn_en">EN</a></li>
-                        <li><a href="javascript:void(0);" id="es" id="btn_es">ES</a></li> -->
                         <li><div id="google_translate_element" class="google"></div></li>
                     </ul>
                 </nav>
