--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FotoClick</title>
     <link rel="stylesheet" href="css/main.css">
-    <!--link rel="icon" href="imagenes/logo1.jpg"--> 
+    <!--link rel="icon" href="imagenes/logo1.jpg"-->
     <!-- <script src="https://unpkg.com/i18next@latest/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-browser-languagedetector@latest/dist/umd/i18nextBrowserLanguageDetector.min.js"></script>
     <script type="module" src="js/i18n.js" defer></script>
     <script type="module" src="js/idioma.js"  defer></script> -->
     <script type="text/javascript">
         function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'en, es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true}, 'google_translate_element');
-                }
-        </script>
-        
-        <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+            new google.translate.TranslateElement({ pageLanguage: 'es', includedLanguages: 'en, es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true }, 'google_translate_element');
+        }
+    </script>
+
+    <script type="text/javascript"
+        src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </head>
 
@@ -38,11 +39,13 @@
                     <ul class="nav-links">
                         <li><a href="#inicio" id="inicio">Inicio</a></li>
                         <li><a href="#portafolio" id="portfolio">Portafolio</a></li>
-                        <li><a href="#nosotros" id="about">Nosotros</a></li>
+                        <li><a href="#sobre-nosotros" id="about">Nosotros</a></li>
                         <li><a href="#contacto" id="contact">Contacto</a></li>
                         <li><a href="https://wa.me/3145203021" id="networks">Redes</a></li>
                         |
-                        <li><div id="google_translate_element" class="google"></div></li>
+                        <li>
+                            <div id="google_translate_element" class="google"></div>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -71,6 +74,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Sección del Portafolio -->
     <section id="portafolio" class="portfolio-section">
@@ -111,25 +115,24 @@
         </div>
     </section>
 
-    <!-- Sección Nosotros -->
-    <section id="nosotros" class="about-section">
-        <div class="about-container">
-            <div class="about-video">
-                <iframe width="560" height="315"
-                    src="https://www.youtube.com/embed/AuKR2fQbMBk?autoplay=1&loop=1&playlist=AuKR2fQbMBk&controls=0"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <!-- Sección Sobre Nosotros -->
+    <section id="sobre-nosotros">
+        <div class="sobre-nosotros-content">
+            <div class="sobre-nosotros-text">
+                <h2>Sobre Nosotros</h2>
+                <p>Somos Julián y Mariana, fotógrafos apasionados por capturar la belleza en lo cotidiano y lo
+                    extraordinario. Nuestro trabajo se centra en congelar momentos y emociones únicas para siempre.
+                    Explora nuestro portafolio y descubre nuestro mundo a través del lente.</p>
             </div>
-            <div class="about-text">
-                <h2 id="about">Sobre Nosotros</h2>
-                <p id="about-text">Somos Julian y Mariana, apasionados por la fotografía. Cada imagen que
-                    capturamos es una ventana a nuestra perspectiva del mundo, reflejando nuestras experiencias y
-                    emociones. Nos especializamos en retratos, paisajes y fotografía urbana, siempre buscando contar
-                    historias y conectar con las personas a través de nuestras imágenes.</p>
+            <div class="sobre-nosotros-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bSGZfxhjNwM?si=7wo9p_jfaE-Bn4_d"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
+
 
     <!-- Sección Contacto -->
     <section id="contacto" class="contact">
