mensaje en el formulario

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             new google.translate.TranslateElement({ pageLanguage: 'es', includedLanguages: 'en, es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true }, 'google_translate_element');
         }
     </script>
+    <!-- Incluye SweetAlert CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.css">
+
+    <!-- Incluye SweetAlert JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
 
     <script type="text/javascript"
         src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
@@ -152,8 +157,16 @@
             </div>
             <button class="bt_enviar" type="submit" id="submit">Enviar</button>
         </form>
+        <!-- <div id="successMessage" style="display: none;">Enviado con éxito</div> -->
     </section>
-
+    
+    <script>
+    document.getElementById("contactForm").addEventListener("submit", function(event){
+        event.preventDefault(); // Evita que el formulario se envíe de manera tradicional
+        document.getElementById("successMessage").style.display = "block"; // Muestra el mensaje de éxito
+    });
+    </script>
+    
     <!-- Botón de WhatsApp -->
     <div id="menu_redes">
         <a class="whatsapp" aria-label="Chat on WhatsApp" href="https://wa.me/3145203021">
