--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FotoClick</title>
     <link rel="stylesheet" href="css/main.css">
-    <!--link rel="icon" href="imagenes/logo1.jpg"-->
-    <!-- <script src="https://unpkg.com/i18next@latest/dist/umd/i18next.min.js"></script>
+    <link rel="icon" href="imagenes/logo1.jpg">
+    <!--<script src="https://unpkg.com/i18next@latest/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-browser-languagedetector@latest/dist/umd/i18nextBrowserLanguageDetector.min.js"></script>
     <script type="module" src="js/i18n.js" defer></script>
     <script type="module" src="js/idioma.js"  defer></script> -->
