Integracion del formulario con formspree

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- Sección Contacto -->
     <section id="contacto" class="contact">
         <h2 id="contact">Contactos</h2>
-        <form id="contactForm">
+        <form id="contactForm" action="https://formspree.io/f/xzzprnkg" method="post">
             <div>
                 <label for="name" id="nameread">Nombre:</label>
                 <input class="input" type="text" id="name" name="name" required>
