--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
 
 
     <!-- Sección del Portafolio -->
-
     <section id="portafolio" class="portfolio-section">
         <h2 id="portafolio">Portafolio</h2>
         <div class="gallery-container">
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="imagenes/1920×2880/woman-8378634_1920.jpg" alt="" onclick="openModal(this)">
+                    <img src="imagenes/1920×2880/woman-8378634_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
                     <p id="portraits">Retratos</p>
@@ -103,7 +102,7 @@
             </div>
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="imagenes/1920×2880/lizard-7938887_1920.jpg" alt="" onclick="openModal(this)">
+                    <img src="imagenes/1920×2880/lizard-7938887_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
                     <p id="nature">Naturaleza</p>
@@ -111,7 +110,7 @@
             </div>
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="imagenes/1920×2880/the-eiffel-tower-1744574_1920.jpg" alt="" onclick="openModal(this)">
+                    <img src="imagenes/1920×2880/the-eiffel-tower-1744574_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
                     <p id="urban">Urbano</p>
@@ -119,7 +118,7 @@
             </div>
             <div class="gallery">
                 <div class="photo-gallery">
-                    <img src="imagenes/1920×2880/chimney-5437407_1920.jpg" alt="" onclick="openModal(this)">
+                    <img src="imagenes/1920×2880/chimney-5437407_1920.jpg" alt="">
                 </div>
                 <div class="text-gallery">
                     <p id="experimental">Experimental</p>
@@ -127,16 +126,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Modal -->
-    <div id="myModal" class="modal">
-      <!--  <span class="close" onclick="closeModal()">&times;</span> -->
-        <div class="modal-content">
-            <img class="modal-img" id="modalImage">
-            <a class="prev" onclick="changeImage(1)">&#10094;</a>
-            <a class="next" onclick="changeImage(1)">&#10095;</a>
-        </div>
-    </div>
 
     <!-- Sección Sobre Nosotros -->
     <section id="sobre-nosotros">
