fix gallery again

--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
         </div>
     </section>
 
+    <!-- Modal para la Galería -->
+    <div id="galleryModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage">
+        <a class="prev" id="prevModal">&lt;</a>
+        <a class="next" id="nextModal">&gt;</a>
+    </div>
+    
+    
     <!-- Sección Sobre Nosotros -->
     <section id="sobre-nosotros">
         <div class="sobre-nosotros-content">
