initial config for webpack and postcss

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             new google.translate.TranslateElement({ pageLanguage: 'es', includedLanguages: 'en, es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true }, 'google_translate_element');
         }
     </script>
+    <script src="dist/bundle.js" defer></script>
+
     <!-- Incluye SweetAlert CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.css">
 
