--- a/index.html
+++ b/index.html
@@ -223,7 +223,13 @@
         <p id="footerd">&copy; 2024 FotoClick. Todos los derechos reservados.</p>
         <p><a href="#">Política de privacidad</a> | <a href="#">Términos y condiciones</a></p>
     </footer>
-    <script src="js/main.js" defer></script>
+        <!-- Incluir los módulos JS -->
+        <script type="module" src="carousel.js"></script>
+        <script type="module" src="menu.js"></script>
+        <script type="module" src="form.js"></script>
+        <script type="module" src="gallery.js"></script>
+        <script type="module" src="darkmode.js"></script>
+        
 </body>
 
 </html>
