--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                 <img src="imagenes/logo1.jpg" alt="logo">
                 <h1>FotoClick</h1>
             </div>
-            <button class="menu-toggle" aria-label="Open Menu">
-                ☰
-            </button>
+            <button class="menu-toggle" aria-label="Open Menu">☰</button>
             <div class="nav">
                 <nav>
                     <ul class="nav-links">
@@ -56,10 +54,9 @@
                         <li><a href="#sobre-nosotros" id="about">Nosotros</a></li>
                         <li><a href="#contacto" id="contact">Contacto</a></li>
                         <li><a href="https://wa.me/3145203021" id="networks">Redes</a></li>
-                        |
-                        <li>
-                            <div id="google_translate_element" class="google"></div>
-                        </li>
+                        <li><a href="" id="login">Registrarse</a></li>
+                        <button class="dark-mode-toggle">Dark Mode</button>
+                        <li><div id="google_translate_element" class="google"></div></li>
                     </ul>
                 </nav>
             </div>
@@ -229,7 +226,7 @@
         <script type="module" src="form.js"></script>
         <script type="module" src="gallery.js"></script>
         <script type="module" src="darkmode.js"></script>
-        
+
 </body>
 
 </html>
