--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
     <title>FotoClick</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="imagenes/logo1.jpg">
-    <!--<script src="https://unpkg.com/i18next@latest/dist/umd/i18next.min.js"></script>
-    <script src="https://unpkg.com/i18next-browser-languagedetector@latest/dist/umd/i18nextBrowserLanguageDetector.min.js"></script>
-    <script type="module" src="js/i18n.js" defer></script>
-    <script type="module" src="js/idioma.js"  defer></script> -->
+
     <script type="text/javascript">
         function googleTranslateElementInit() {
-            new google.translate.TranslateElement({ pageLanguage: 'es', includedLanguages: 'en, es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true }, 'google_translate_element');
+            new google.translate.TranslateElement({ pageLanguage: 'es', includedLanguages: 'en, es'}, 'google_translate_element');
         }
     </script>
     <script src="dist/bundle.js" defer></script>
