--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                         <img id="translateButton" src="/imagenes/icons/traductor.png" alt="Cambiar Idioma"
                             style="cursor:pointer;">
                         <div id="google_translate_element" style="display:none;"></div>
+                        <img src="imagenes/icons/moon.png" id="icon">
                     </ul>
+                    
                 </nav>
             </div>
         </div>
