register and login v1

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +58,8 @@
                         <li><a href="#sobre-nosotros" id="about">Nosotros</a></li>
                         <li><a href="#contacto" id="contact">Contacto</a></li>
                         <li><a href="https://wa.me/3145203021" id="networks">Redes</a></li>
-                        <li><a href="" id="login">Registrarse</a></li>
+                        <li><a href="register.html" id="register">Registrarse</a></li>
+                        <li><a href="login.html" id="login">Ingresar</a></li>
                         <!-- <button class="dark-mode-toggle">Dark Mode</button>-->
                         <img src="imagenes/icons/luna-linea.png" id="icon">
                         <img id="translateButton" src="/imagenes/icons/traductor.png" alt="Cambiar Idioma"
@@ -203,7 +203,6 @@
     
     <!-- Incluir los módulos JS -->
     <script type="module" src="/js/carousel.js"></script>
-    <script type="module" src="/js/form.js"></script>
     <script type="module" src="/js/gallery.js"></script>
     <script type="module" src="/js/darkmode.js"></script>
     <script type="module" src="/js/traductor.js"></script>
