--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     </footer>
     
     <!-- Incluir los módulos JS -->
+    <script type="module" src="/js/main.js"></script>
     <script type="module" src="/js/carousel.js"></script>
     <script type="module" src="/js/gallery.js"></script>
     <script type="module" src="/js/darkmode.js"></script>
