--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
     </footer>
     
     <!-- Incluir los módulos JS -->
-    <script type="module" src="/js/main.js"></script>
-    <script type="module" src="/js/carousel.js"></script>
-    <script type="module" src="/js/gallery.js"></script>
-    <script type="module" src="/js/darkmode.js"></script>
-    <script type="module" src="/js/traductor.js"></script>
+    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/carousel.js"></script>
+    <script type="module" src="./js/gallery.js"></script>
+    <script type="module" src="./js/darkmode.js"></script>
+    <script type="module" src="./js/traductor.js"></script>
     
 </body>
 
