--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li><a href="login.html" id="login">Ingresar</a></li>
                         <!-- <button class="dark-mode-toggle">Dark Mode</button>-->
                         <img src="imagenes/icons/luna-linea.png" id="icon">
-                        <img id="translateButton" src="/imagenes/icons/traductor.png" alt="Cambiar Idioma"
+                        <img id="translateButton" src="./imagenes/icons/traductor.png" alt="Cambiar Idioma"
                             style="cursor:pointer;">
                         <div id="google_translate_element" style="display:none;"></div>
                     </ul>
