corrigiendo error en formulario

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
     <script type="module" src="./js/gallery.js"></script>
     <script type="module" src="./js/darkmode.js"></script>
     <script type="module" src="./js/traductor.js"></script>
+    <script type="module" src="./js/form.js"></script>
+    <script type="module" src="./js/register.js"></script>
     
 </body>
 
